# Madokami

./: .gitignore  404.html  CNAME  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  robots.txt  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: deploy-docs.yml  docker-image.yml
assets/: 404.html-4zkv0fp9.js  app-BS6G5FnF.js  basic_settings.html-B_rmVqga.js  bilibili.html-eV6T-_g9.js  index.html-BOsqjPiQ.js  index.html-BupMOv3W.js  index.html-DVQ6vdpL.js  install.html-DaZdq3eJ.js  mikan.html-BdecUae4.js  style-Cum9wr7G.css  update_sub.html-Csoy-tYy.js
backend/: .dockerignore  .env  .gitignore  README.md  pyproject.toml  read_version.py
backend/app/: initial_data.py  main.py
backend/app/core/: extension_manager.py
backend/app/core/interface/: downloader_middleware.py  engine.py  models.py  parser.py  requester.py
backend/app/plugins/: __init__.py  engine.py  parser.py  requester.py
backend/app/plugins/madokami_plugin_danmaku/: __init__.py  crud.py  danmaku_converter.py  danmaku_downloader.py  danmaku_formatter.py  models.py  subscription_manager.py  test.py  video_downloader.py
backend/app/plugins/mikan_project/: __init__.py  api.py  bangumi_requester.py  crud.py  mikan_downloader_engine.py  mikan_search_engine.py  models.py  parser.py  search_util.py  subscription_manager.py  utils.py
backend/app/tests/: test_mikan_project.py
docs/.vuepress/: config.ts  navbar.ts  sidebar.ts  theme.ts
docs/.vuepress/styles/: palette.scss
docs/plugin_guide/: README.md  bilibili.md  mikan.md
docs/startup/: README.md  basic_settings.md  install.md  update_sub.md
frontend/: README.md  index.html  openapi-generator-config.yaml  openapi.json  package-lock.json  package.json  schema.d.ts  tsconfig.app.json  vite.config.ts
frontend/.openapi-generator/templates/: baseApi.mustache
frontend/src/: App.vue  main.ts
frontend/src/api/: modifiedAxios.ts
frontend/src/assets/: base.css  (+1 more)
plugin_guide/: bilibili.html  index.html  mikan.html
startup/: basic_settings.html  index.html  install.html  update_sub.html
(+65 files in other folders)
